fix z-index for website

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -180,7 +180,7 @@
 }
 
 /* RainbowKit Wallet */
-[data-rk] ._9pm4ki3 {
+[data-rk] .iekbcc0 {
     z-index: 50;
 }
 
